# carpentry-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deployment-pipeline.yaml
terraform/: api_gateway.tf  lambda.tf  main.tf  outputs.tf  variables.tf
tools/: document_generator_workflow.py  logger_config.py  quote_generator.py  utils.py
tools/api/: app.py  models.py
tools/document_inputs/: document_input_base.py  google_drive_input.py  local_file_input.py
tools/document_outputs/: document_output_base.py  google_drive_output.py  local_file_output.py
